# fastapitelegram

./: .dockerignore  .env  Dockerfile  README.md  main.py  pyproject.toml  telegram_server.py
Bot/: bot.py  botConfig.py  commands.py
langchain/: llm.py
scripts/: echobot.py  entrypoint.py
tests/: test_client.py  test_unitbot.py
